# Bravo

./: .gitignore  README.md
Bravo/: .env_sample  .gitignore  README.md  index.html  main.js  orb.html  package-lock.json  package.json  preload.js
Browser-Agent/: .env_sample  .gitignore  browser_tools.json  main.py  pyproject.toml  test.py
Browser-Agent/utils/: browser_agent.py
Coral-Server/: .gitignore
Voice-Agent/: .env_sample  .gitignore  README.md  main.py  pyproject.toml
Voice-Agent/utils/: coral_agent.py
