[project]
name = "coral-elevenlabsvoice-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.9.2",
    "ffmpeg>=1.4",
    "inputimeout>=1.0.4",
    "keyboard>=0.13.5",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-experimental==0.3.4",
    "langchain-groq==0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters==0.1.7",
    "langchain-openai==0.3.26",
    "pandas==2.3.0",
    "pyaudio>=0.2.14",
    "scipy>=1.16.1",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "tabulate>=0.9.0",
    "uv>=0.7.17",
]
